--- a/app/views/directors_templates/eldest.html.erb
+++ b/app/views/directors_templates/eldest.html.erb
@@ -1,6 +1,6 @@
 <h1> Eldest director </h1>
 
 <p>
-The eldest director in our dataset right now is <%=@oldest.name%>, born on <%=@oldest.dob.strftime("%B %e, %Y")%>
+The eldest director in our dataset right now is <div href="https://www.wikipedia.org/"> <%=@oldest.name%> </div>, born on <%=@oldest.dob.strftime("%B %e, %Y")%>
 
 </p>
