--- a/app/views/directors_templates/index.html.erb
+++ b/app/views/directors_templates/index.html.erb
@@ -1,22 +1,44 @@
-<h1>
-List of all directors
-</h1>
+<head>
+  <style>
 
-<table border="1">
-<% @list_of_directors.each do |a_thing| %>
-  <tr>
-    <td> <%= a_thing.id %></td>
-    <td> 
-      <img src="<%= a_thing.image %>">
-    </td>
-    <td> <%= a_thing.name %></td>
-    <td> <%= a_thing.dob %></td>
-    <td> 
-      <a href="/directors/<%= a_thing.id %>">
-        Show details
-      </a>
-    </td>
+  .table-title {
+    justify-content: center;
+    font-weight: bold
+  }
 
-  </tr>
-<% end %>
-</table>
+  </style>
+</head>
+
+<body>
+
+  <h1>
+  List of all directors
+  </h1>
+
+  <table border="1">
+    <tr class="table-title">
+    <td> ID </td>
+    <td> Image </td>
+    <td> Name </td>
+    <td> Dob </td>
+    <td>  </td>
+    </tr>
+  <% @list_of_directors.each do |a_thing| %>
+    <tr>
+      <td> <%= a_thing.id %></td>
+      <td> 
+        <img src="<%= a_thing.image %>">
+      </td>
+      <td> <%= a_thing.name %></td>
+      <td> <%= a_thing.dob %></td>
+      <td> 
+        <a href="/directors/<%= a_thing.id %>">
+          Show details
+        </a>
+      </td>
+
+    </tr>
+  <% end %>
+  </table>
+
+</body>
