--- a/app/views/actors_templates/actors_index.html.erb
+++ b/app/views/actors_templates/actors_index.html.erb
@@ -12,7 +12,7 @@
 <body>
 
   <h1>
-  List of all directors
+  List of all actors
   </h1>
 
   <hr>
@@ -25,16 +25,16 @@
     <td> Dob </td>
     <td>  </td>
     </tr>
-  <% @list_of_directors.each do |a_thing| %>
+  <% @list_of_actors.each do |a_thing| %>
     <tr>
       <td> <%= a_thing.id %></td>
       <td> 
-        <img src="<%= a_thing.image %>">
+        <img src="<%= a_thing.image %>" style="width:250px;">
       </td>
       <td> <%= a_thing.name %></td>
       <td> <%= a_thing.dob %></td>
       <td> 
-        <a href="/directors/<%= a_thing.id %>">
+        <a href="/actors/<%= a_thing.id %>">
           Show details
         </a>
       </td>
@@ -42,5 +42,13 @@
     </tr>
   <% end %>
   </table>
+
+
+<hr>
+
+
+
+
+
 
 </body>
