--- a/app/views/movies_templates/movies_index.html.erb
+++ b/app/views/movies_templates/movies_index.html.erb
@@ -12,7 +12,7 @@
 <body>
 
   <h1>
-  List of all directors
+  List of all movies
   </h1>
 
   <hr>
@@ -21,20 +21,25 @@
     <tr class="table-title">
     <td> ID </td>
     <td> Image </td>
-    <td> Name </td>
-    <td> Dob </td>
+    <td> Title </td>
+    <td> Year </td>
+    <td> Director </td>
     <td>  </td>
     </tr>
-  <% @list_of_directors.each do |a_thing| %>
+  <% @list_of_movies.each do |a_thing| %>
     <tr>
       <td> <%= a_thing.id %></td>
       <td> 
-        <img src="<%= a_thing.image %>">
+        <img src="<%= a_thing.image %>" style="width:250px;">
       </td>
-      <td> <%= a_thing.name %></td>
-      <td> <%= a_thing.dob %></td>
+      <td> <%= a_thing.title %></td>
+      <td> <%= a_thing.year %></td>
       <td> 
-        <a href="/directors/<%= a_thing.id %>">
+        <% d= Director.where({ :id => a_thing.director_id}).at(0) %>
+        <%= d.name %>
+      </td>
+      <td> 
+        <a href="/movies/<%= a_thing.id %>">
           Show details
         </a>
       </td>
